--- a/SpringDataAccess/.classpath
+++ b/SpringDataAccess/.classpath
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/GenericComponents"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="/CalBook/activation.jar"/>
-	<classpathentry kind="lib" path="/CalBook/commons-beanutils-1.8.3.jar"/>
-	<classpathentry kind="lib" path="/CalBook/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="/CalBook/commons-lang.jar"/>
-	<classpathentry kind="lib" path="/CalBook/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/CalBook/ezmorph-1.0.6.jar"/>
-	<classpathentry kind="lib" path="/CalBook/iText-2.1.5.jar"/>
-	<classpathentry kind="lib" path="/CalBook/jcommon-1.0.16.jar"/>
-	<classpathentry kind="lib" path="/CalBook/jfreechart-1.0.13.jar"/>
-	<classpathentry kind="lib" path="/CalBook/json-lib-2.4-jdk15.jar"/>
-	<classpathentry kind="lib" path="/CalBook/mysql-connector-java-5.0.8-bin.jar"/>
-	<classpathentry kind="lib" path="/CalBook/spring-2.5.6.jar"/>
-	<classpathentry kind="lib" path="/CalBook/spring-beans-2.5.6.jar"/>
-	<classpathentry kind="lib" path="/CalBook/spring-context-2.0.5.jar"/>
-	<classpathentry kind="lib" path="/CalBook/spring-core.jar"/>
-	<classpathentry kind="lib" path="/CalBook/spring-dao.jar"/>
-	<classpathentry kind="lib" path="/CalBook/spring-jdbc-2.5.6.jar"/>
-	<classpathentry kind="lib" path="/CalBook/spring-web-2.0.5.jar"/>
-	<classpathentry kind="lib" path="/CalBook/log4j-1.2.11.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0">
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.utility;#system#"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="owner.project.facets" value="#system#;jst.utility"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
